处理IDEA检查出的存在风险问题代码